# AULquoteapp

./: .embedding_cache.json  .gitignore  MIGRATION_ASYNC_TO_SYNC.md  README.md  alembic.ini  code_health_report_20250226_112444.json  code_knowledge_graph.graphml  code_knowledge_graph_20250225_135207.graphml  code_knowledge_graph_20250225_135207.json  code_knowledge_graph_20250225_174243.graphml  code_knowledge_graph_20250225_174243.json  code_knowledge_graph_20250225_175548.json  code_knowledge_graph_20250225_175700.json  code_knowledge_graph_20250226_162619.graphml  code_knowledge_graph_20250226_162619.json  package-lock.json  package.json  pyproject.toml  rate_cards_original.py  requirements.txt  run.ps1
.github/workflows/: ci.yml  ci.yml.bak  test.yml  test.yml.bak
archive/: README.md
config/development/: backend.env  frontend.env
config/shared/: ai.env  db.env
deployment/config/: .env.example  .env.template  README.md
deployment/docker/: .dockerignore  docker-compose.override.yml  docker-compose.yml
deployment/scripts/: README.md  update_deps.ps1
docs/: ARCHITECTURE.md  CHANGELOG.md  CONVERSATION_TEST_SPEC.md  IMPLEMENTATION_PLAN.md  RATE_RULES.md  RATE_TECHNICAL_SPEC.md  RECENT_UPDATES.md  REMAINING_IMPLEMENTATION.md  TESTING.md  USER_FLOW.md  api.md  auth.md  docker-bake-implementation.md  llm-rate-calculator-test-suite.md  typescript-type-checking-strategy.md
docs/components/: customer.md  rate.md
frontend/: .env.development  .env.production  Dockerfile  Dockerfile.dev  README.md  UX_IMPROVEMENT_PLAN.md  deploy.js  jest.config.cjs  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: quote-form.spec.ts
requirements/: base.in  dev.in  ml.in  prod.in
semantic_context/: embedding_cache.json
shared/: README.md
tests/: conftest.py  test_admin_dashboard.py  test_complex_storage_quote.py  test_conversation_flow.py  test_conversation_handler.py  test_duration_parsing.py  test_end_to_end_async.py  test_end_to_end_experience.py  test_quote_deal_relationship.py  test_quote_lifecycle.py  test_quote_service.py  test_security.py  utils.py
tools/: requirements.txt  update_kg.py  watch_codebase.py
warehouse_quote_app/: README.md  rag_document.txt
(+311 files in other folders)
